@@ -7,11 +7,8 @@ namespace LHAPDF {
 
   /// Extrapolates using the closest point on the Grid.
   class NearestPointExtrapolator : public Extrapolator {
+  public:
 
-    /// \param id The PDG parton ID code
-    /// \param x The momentum fraction
-    /// \param q2 The squared energy scale
-    /// \return The xf value at (x,q2)
     double extrapolateXQ2(int id, double x, double q2) const;
 
   };
